[project]
name = "tread-diffusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.0",
    "beartype>=0.21.0",
    "diffusers>=0.34.0",
    "einops>=0.8.1",
    "jaxtyping>=0.3.2",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.8",
    "timm>=1.0.19",
    "torch>=2.8.0",
    "torchdiffeq>=0.2.5",
    "torchmetrics[image]>=1.8.1",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "transformers>=4.55.2",
    "wandb>=0.21.1",
]



[tool.ruff]
line-length = 104
ignore = [
    "E501", 
    "F821",
    "F722"
]

[tool.ruff.mccabe]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["tread_diffusion*"]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "lovely-tensors>=0.1.18",
    "pytest>=8.4.1",
    "ruff>=0.12.8",
    "vulture>=2.14",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
